bpo-41498: Fix build on platforms without sigset_t (GH-29770)